Helper properties and arguments

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@ember/optional-features": "^2.0.0",
     "@ember/string": "^3.1.1",
     "@ember/test-helpers": "^3.1.0",
+    "@fortawesome/ember-fontawesome": "^0.4.3",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
     "broccoli-asset-rev": "^3.0.0",
@@ -77,5 +79,8 @@
   },
   "ember": {
     "edition": "octane"
+  },
+  "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.4.0"
   }
 }
